[package]
name = "rust-code-executor-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.6.1"
actix-web = "4.0.1"
ahash = "0.7.6"
base64 = "0.20.0-alpha.1"
cfg-if = "0.1.10"
dotenv = "0.15.0"
env_logger = "0.9.0"
futures = "0.3.21"
lazy_static = "1.4.0"
log = "0.4.16"
paperclip = { git = "https://github.com/if0ne/paperclip", features = ["actix4", "swagger-ui"] }
regex = "1"
tokio = { version = "1.16.1", features = ["io-std", "process"] }
serde = "1.0.136"
serde_json = "1.0.79"
wait4 = "0.1.3"
