[package]
name = "load-test-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
serde = "1.0.136"
serde_json = "1.0.79"
rand = "0.8.5"
reqwest = { version = "0.11.10", features = ["json"] }
rce = { package = "rust-code-executor-service", path = "../" }
tokio = { version = "1.17.0", features = ["full"] }
quicli = "0.4.0"