[package]
name = "load-test-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.11.0"
dotenv = "0.15.0"
futures = "0.3.21"
iced = { version = "0.4.2", features = ["image", "debug", "tokio"] }
lazy_static = "1.4.0"
serde = "1.0.136"
serde_json = "1.0.79"
rand = "0.8.5"
reqwest = { version = "0.11.10", features = ["json", "rustls-tls"] }
rce = { package = "rust-code-executor-service", path = "../" }
tokio = { version = "1.18.1", features = ["full"] }
